--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     },
     "autoload": {
         "psr-4": {
-            "guest_book\\": "app/"
+            "App\\": "app/"
         },
         "classmap": [
             "database/seeds",
