--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+DATA_PER_PAGE_NUM=5
+FAKER_DATA_NUM=20
